Revision history for CGI-Info

1.10
	Fix test failures on non English systems https://www.cpantesters.org/cpan/report/23060ef6-feb3-11f0-b888-30156e8775ea

1.09	Fri Jan 30 08:54:26 EST 2026
	Updated test dashboard shows CPAN test failures
	Bumped version of Object::Configure to see if that fixes https://www.cpantesters.org/cpan/report/a8dc0030-dc5d-11f0-baa1-832b6e8775ea
	Bumped version of Params::Validate::Strict to see if that fixes https://www.cpantesters.org/cpan/report/a2d57ccc-dca6-11f0-8c44-bc72dd65bc3d

1.08	Thu Dec 18 08:12:56 EST 2025
	Invalid args could get through if the logger is set
	Make get_cookie() just call cookie()
	Verify the format of the cookie name
	Added test dashboard
	Croak if tmpdir is given a non-scalar for default
	No longer use Log::Any
	Set HTTP status 501 when GET is given Multipart/form-data

1.07	Sun Sep 14 09:16:12 EDT 2025
	Fix https://ci.appveyor.com/project/nigelhorne/cgi-info-vqpj8/builds/52537979/job/bnag8kvc2htkl3vf

0.106	Thu Aug  7 19:37:56 EDT 2025
	Added bidswitchbot as a bot
	Allow 'St Peter&#39;s' as an argument
	Fix params() to return undef, not a scalar, when blocking an SQL injection
	AUTOLOAD: added sanity check to the method name
	Fix json testing when stdin_data is set
	Only load IO::Interactive when needed
	WAF: Strip unencoded NUL bytes as well as encoded NUL bytes

0.105	Thu Jul 17 15:07:43 EDT 2025
	carp for warning when logger not set
	Flag Google-InspectionTool as a search_engine
	Added "Fuzz Faster U Fool" as a bot
	Also look in SSL_TLS_SNI for hostname
	Allow domain_name() to be called as a class method

0.104	Fri Jun 20 07:41:53 EDT 2025
	Bumped minimum version of Config::Abstraction - and hence removed MD5_CTX workaround code
	Flag Alibaba as a search engine
	Use Object::Configure instead of Class::Debug
	Allow IS_SEARCH_ENGINE and IS_MOBILE to be set in the environment

0.103	Fri May 16 17:48:32 EDT 2025
	Mark Clickagy as a bot
	Don't use notice() since Log::Log4perl doesn't understand it