@@ -2,6 +2,8 @@ Revision history for CGI-Info
 
 1.10
 	Fix test failures on non English systems https://www.cpantesters.org/cpan/report/23060ef6-feb3-11f0-b888-30156e8775ea
+	Try to fix "skipped: (no reason given)" https://www.cpantesters.org/cpan/report/6af2b33e-fef6-11f0-9424-b5d717f4d45d
+		Could be an issue with Test::Needs
 
 1.09	Fri Jan 30 08:54:26 EST 2026
 	Updated test dashboard shows CPAN test failures
